# thumbnailviewer

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
binary/macOS/: thumbnailviewer
include/: MainWindow.h  ThumbnailModel.h  ThumbnailView.h
src/: MainWindow.cpp  ThumbnailModel.cpp  ThumbnailView.cpp  main.cpp
